# tone9

./: .gitignore  Containerfile  README.md  ansible.cfg  inventory.ini  inventory.ini.example  pyproject.toml
docs/: ARCHITECTURE.md  DONE_CRITERIA.md  EXTRACTION.md  HANDOFF_2026-06-18.md  HANDOFF_NEXT_CHAT_PROMPT.md  NEXT_BATCH_PLAN.md  RENDER_AUDIT.md  ROADMAP.md  RUNTIME.md  SLOT_FILL_PLAN.md  SLOT_MODEL.md  VISUAL_QA.md
fixtures/: README.md
outline_gen/: audit.py  cli.py  fixture_runner.py  render.py  service_schema.py  slot_fill.py  slots.py  visual_compare.py
playbooks/: bootstrap-tone9-host.yml  deploy-tone9-runtime.yml
registries/: README.md  count_style_rules_v3.yaml  generator_roadmap_v1.yaml  header_and_rank_marker_rules_v1.yaml  live_fixture_manifest_v2.yaml  manual_edit_manifest_v6.yaml  matins_gospel_cycle_v1.yaml  oktoichos_praises_doxastika_v1.yaml  optional_slot_rules_v2.yaml  service_overlay_schema_v1.yaml  service_shape_classifier_v1.yaml  slot_registry_v1.yaml  template_field_style_rules_v1.yaml  v7_template_change_manifest.yaml
templates/: README.md
tests/: test_extract_fixtures.py  test_fixture_runner.py  test_peter_paul_fixture_model.py  test_service_schema_fixtures.py  test_slot_fill_generation.py
tools/: tone9  tone9-audit-fixtures  tone9-build  tone9-compare-current-to-fixture  tone9-deploy  tone9-fixture-list  tone9-fixture-regression  tone9-fixture-smoke  tone9-generate-fixtures  tone9-journal  tone9-metrics-cat  tone9-podman-info  tone9-render-current  tone9-run  tone9-runtime-tree  tone9-slot-list  tone9-smoke  tone9-status  (+4 more)
(+47 files in other folders)
